--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  
+
   <body class="background">
 
     <header class="main-header">
@@ -38,7 +38,7 @@
               </form>
             </li>
   			  	<li class="login">
-              <a class="button login-button" href="#"><img src="img/login.svg" alt="login icon">Вход</a>  
+              <a class="button login-button" href="#">Вход</a>  
               <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
                 <p>
                   <label class="visually-hidden" for="email">Электронная почта</label>
@@ -58,7 +58,7 @@
               </form>
             </li>
   				  <li class="cart">
-              <a class="button cart-button" href="#"><img src="img/cart.svg" alt="cart icon">Пусто</a>
+              <a class="button cart-button" href="#">Пусто</a>
             </li>
   			  </ul>
   	   	</nav>
@@ -73,28 +73,31 @@
   		<h1 class="visually-hidden">Интернет-магазин мороженного Глейси</h1>
   		<section class="slider">
   			<h2 class="visually-hidden">Промо</h2>
+        <input class="visually-hidden" type="radio" id="btn-1" name="toggle" checked>
+        <input class="visually-hidden" type="radio" id="btn-2" name="toggle">
+        <input class="visually-hidden" type="radio" id="btn-3" name="toggle">
+        <div class="slider-controls">
+            <label for="btn-1">Первый</label>
+            <label for="btn-2">Второй</label>
+            <label for="btn-3">Третий</label>
+          </div>
   			<ul class="slider-list">
   				<li class="slider-item">
-            <img src="img/ice_cream_1.png" alt="Крем-брюле и пломбир"></img>
+            <img src="img/ice_cream_1.png" alt="Крем-брюле и пломбир">
   					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item visually-hidden">
-            <img src="img/ice_cream_2.png" alt="Шоколадный пломбир и сорбет"></img>
+            <img src="img/ice_cream_2.png" alt="Шоколадный пломбир и сорбет">
   					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item visually-hidden">
-            <img src="img/ice_cream_3.png" alt="Пломбир и клубничный сорбет"></img>
+            <img src="img/ice_cream_3.png" alt="Пломбир и клубничный сорбет">
   					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   			</ul>
-        <div class="slider-radio">
-          <input type="radio" id="btn-1" name="toggle" checked>
-          <input type="radio" id="btn-2" name="toggle">
-          <input type="radio" id="btn-3" name="toggle">
-        </div>
   		</section>
 
   		<section class="stock">
@@ -118,7 +121,7 @@
   			<ul class="catalog-list">
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
+  						<img src="img/item_icons/1.png" width="267" height="267" alt="Изображение товара">
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
@@ -127,7 +130,7 @@
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/2.jpg" width="200" height="200" alt="Изображение товара">
+  						<img src="img/item_icons/2.png" width="267" height="267" alt="Изображение товара">
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
@@ -136,7 +139,7 @@
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
+  						<img src="img/item_icons/3.png" width="267" height="267" alt="Изображение товара">
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
@@ -145,7 +148,7 @@
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
+  						<img src="img/item_icons/4.png" width="267" height="267" alt="Изображение товара">
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
@@ -161,12 +164,12 @@
   				<li class="description description-1">
   					Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
   				</li>
-  				<li class="description description-2">
-  					Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-  				</li>
   				<li class="description description-3">
   					Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
   				</li>
+          <li class="description description-2">
+            Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+          </li>
   				<li class="description description-4">
   					Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
   				</li>
@@ -184,8 +187,8 @@
   			 <p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
   			 <form class="form dispatch-form" action="https://echo.htmlacademy.ru" method="post">
             <p>
-             <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
-            <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
+              <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
+              <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
            </p>
            <p>
              <button class="button" type="submit">Отправить</button>
@@ -197,7 +200,7 @@
   		<section class="map">
   			<h2 class="visually-hidden">Карта и адрес</h2>
   			<p>
-          <img src="img/map.jpg" width="1050" height="744" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
+          <img src="img/map.jpg" width="1250" height="640" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
         </p>
   			<div class="map-adress">
   				<p>
@@ -217,24 +220,68 @@
   	<footer class="main-footer">
   		<div class="footer-social">
   			<ul class="social-list">
-  				<li><a class="social-button" href="#"><img src="img/twitter.svg" width="32" height="32" alt="Twitter" aria-label="Мы в Twitter"></a></li>
-  				<li><a class="social-button" href="#"><img src="img/instagram.svg" width="32" height="32" alt="Instagram" aria-label="Мы в Instagramm"></a></li>
-  				<li><a class="social-button" href="#"><img src="img/facebook.svg" width="32" height="32" alt="Facebook" aria-label="Мы в Facebook"></a></li>
-  				<li><a class="social-button" href="#"><img src="img/vk.svg" width="32" height="32" alt="VK" aria-label="Мы в VK"></a></li>
+  				<li><a class="social-button" href="#">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px"height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+              <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
+              M23.944,12.809c-0.251,6.516-3.463,10.832-10.992,10.702c-0.14,0-0.205,0-0.233,0c-0.015,0-0.021,0-0.021,0
+              c-0.029,0-0.094,0-0.232,0c-0.447,0-4.543-0.443-5.344-1.823c2.479,0.19,4.247-0.406,5.12-1.136
+              c-1.048-0.289-2.923-0.461-3.251-2.848c0.384,0.104,0.618,0.221,1.299,0.113c-1.307-0.824-2.758-1.519-2.679-3.643
+              c0.311,0.317,1.164,0.518,1.46,0.457c-0.768-0.233-2.149-3.244-0.974-4.781c1.984,1.79,4.075,3.482,7.804,3.643
+              c0.227-2.214,1.24-3.699,3.168-4.325c1.84-0.479,3.255,0.26,3.901,1.138c0.737-0.224,1.453-0.466,2.193-0.685
+              c-0.004,0.833-0.569,1.463-0.935,1.709c0.747,0.165,1.423-0.475,1.423-0.475C25.467,11.818,24.557,12.58,23.944,12.809z"/>
+            </svg>    
+          </a></li>
+  				<li><a class="social-button" href="#">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+              <path fill="#FFFFFF" d="M20.916,16c0,2.728-2.211,4.938-4.938,4.938S11.039,18.728,11.039,16c0-0.394,0.051-0.773,0.138-1.14
+              h-0.897v6.838h11.396V14.86h-0.897C20.865,15.227,20.916,15.606,20.916,16z"/>
+              <path fill="#FFFFFF" d="M15.978,18.659c1.466,0,2.659-1.193,2.659-2.659s-1.193-2.659-2.659-2.659
+              c-1.466,0-2.659,1.193-2.659,2.659S14.511,18.659,15.978,18.659z"/>
+              <rect x="18.637" y="10.302" fill="#FFFFFF" width="3.039" height="3.039"/>
+              <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
+              M23.955,21.698c0,1.254-1.025,2.279-2.279,2.279H10.279C9.026,23.978,8,22.952,8,21.698V10.302c0-1.253,1.026-2.279,2.279-2.279
+              h11.396c1.254,0,2.279,1.026,2.279,2.279V21.698z"/>
+            </svg>    
+          </a></li>
+  				<li><a class="social-button" href="#">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+              <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.163,0,16s7.164,16,16,16c8.837,0,16-7.164,16-16S24.837,0,16,0z M20.062,9.455h-3.021
+              v3.444h3.021v3.445h-3.021v8.61h-3.021v-8.61H11v-3.445h3.021V9.455c0-1.902,1.353-3.445,3.021-3.445h3.021V9.455z"/>
+            </svg>
+          </a></li>
+  				<li><a class="social-button" href="#">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+              <path fill="#FFFFFF" d="M16.637,14.495c0.402-0.019,0.719-0.082,0.951-0.188c0.326-0.145,0.54-0.33,0.641-0.559
+              c0.101-0.229,0.15-0.496,0.15-0.797c0-0.232-0.058-0.465-0.174-0.697c-0.116-0.232-0.322-0.405-0.617-0.517
+              c-0.264-0.1-0.592-0.155-0.984-0.165c-0.392-0.009-0.943-0.014-1.652-0.014h-0.339v2.965h0.565
+              C15.749,14.523,16.235,14.514,16.637,14.495z"/>
+              <path fill="#FFFFFF" d="M18.118,17.084c-0.282-0.081-0.672-0.125-1.166-0.132c-0.494-0.006-1.012-0.009-1.55-0.009h-0.79v3.493
+              h0.264c1.014,0,1.74-0.003,2.18-0.009c0.438-0.007,0.843-0.088,1.212-0.245c0.377-0.157,0.633-0.364,0.774-0.625
+              s0.214-0.562,0.214-0.9c0-0.446-0.088-0.788-0.261-1.03C18.825,17.386,18.531,17.204,18.118,17.084z"/>
+              <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
+              M22.602,20.531c-0.273,0.533-0.646,0.976-1.124,1.327c-0.552,0.415-1.161,0.71-1.823,0.886s-1.501,0.264-2.519,0.264h-6.121V8.987
+              h5.443c1.13,0,1.957,0.038,2.48,0.113c0.524,0.076,1.045,0.242,1.561,0.5c0.533,0.27,0.929,0.632,1.189,1.087
+              c0.26,0.455,0.392,0.975,0.392,1.558c0,0.678-0.179,1.278-0.536,1.795c-0.358,0.518-0.863,0.92-1.517,1.208v0.075
+              c0.917,0.182,1.642,0.559,2.179,1.13c0.537,0.571,0.807,1.325,0.807,2.261C23.013,19.392,22.875,19.997,22.602,20.531z"/>
+            </svg>    
+          </a></li>
   			</ul>
   		</div>
 
 		<nav class="footer-links">
   			<ul class="links-list">
-  				<li><a href="#">Для поставщиков</a></li>
+  				<li class="heart"><a href="#">Для поставщиков</a></li>
+          <li><a href="#">Наши документы</a></li>
   				<li><a href="#">О производстве</a></li>
-  				<li><a href="#">Наши документы</a></li>
   				<li><a href="#">Экологические стандарты</a></li>
   			</ul>
   		</nav>
 
   		<div class="footer-copyright">
-  			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg" width="128" height="39" alt="HTMLAcademy"></a>
+  			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg" width="108" height="39" alt="HTMLAcademy"></a>
   			<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
   		</div>
   	</footer>
